# learning-haskell

./: .gitignore  .project  LearningHaskell.cabal  input.txt  output.txt
src/: HelloWorld.hs  Main.hs
src/FilesSystem/: FileSystem.hs
src/ch07/: basicio.hs  callingpure.hs  tempfile.hs  toupper-imp.hs  toupper-lazy1.hs  toupper-lazy2.hs  toupper-lazy3.hs
src/ch09/: BetterPredicate.hs  Main.hs  RecursiveContents.hs  SimpleFinder.hs
src/ch13/: Buildmap.hs  Funcrecs.hs  Lookup.hs  Num.hs  Numsimple.hs
src/misc/: A.hs  Hello.hs  Main.hs
src/typeExamples/: Main.hs
