name:           LearningHaskell
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Familie Fecht

executable LearningHaskell
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base >= 4
  ghc-options:     -Wall
  other-modules:   
                   HelloWorld,
                   RecursiveContents,
                   Basicio,
                   Lookup,
                   Buildmap,
                   Funcrecs,
                   Numsimple,
                   Num,
                   FileSystem

